--- a/Template LaTeX/TeXFiles/PresentationDeLaSociete.tex
+++ b/Template LaTeX/TeXFiles/PresentationDeLaSociete.tex
@@ -30,7 +30,7 @@ CADORIM offre une large palette de prestations organisées autour des activités
 	
 \end{enumerate}
 \section{Planification du projet}
-J'effectuais le diagramme de Gantt, pour avoir une meilleure compréhension de la chronologie des étapes de notre projet.
+J'effectuais le diagramme de Gantt, pour avoir une meilleure compréhension de la chronologie des étapes de mon projet.
 \newline
 \newline
 \includegraphics[width=500px,height=175px]{./Template LaTeX/Images/gantt.png}
@@ -45,10 +45,5 @@ données brutes du cahier de charge
 données provenant de la conception.
 \item Déploiement : externalisation des ressources.
 \end{enumerate}
-\newline
-La méthodologie utilisée tout au long de ce projet est XP, de ce fait on a
-chaque jour une réunion de mis à point de ce qui a été fait et de ce qui
-ne l’ai pas.
--L’outil de planification et de répartition des tâches utilisées est planzone:
-pour la planification et la gestion du projet
+
 
